--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -20,11 +20,12 @@
 <!-- Custom Style Sheets -->
 
 <!-- JavaScript Libraries -->
-<script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="./js/lib/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 </head>
 
 <body>
+	<!-- Navigation -->
 	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
@@ -39,7 +40,7 @@
 				<a class="navbar-brand visible-xs" href="./index.html">CloudDSF+</a>
 			</div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
+			<!-- Collect the nav links for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
 					<li><a href="./index.html"><span><strong>
@@ -57,6 +58,7 @@
 		</div>
 	</header>
 
+	<!-- Main content -->
 	<div class="container">
 		<div class="row">
 			<div class="col-md-5">
