--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -25,7 +25,7 @@
 <link href="./css/knowledgeBase.css" rel="stylesheet" />
 
 <!-- JavaScript Libraries -->
-<script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="./js/lib/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap-switch.min.js" type="text/javascript"></script>
 <script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
@@ -49,7 +49,7 @@
 				<a class="navbar-brand visible-xs" href="./index.html">CloudDSF+</a>
 			</div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
+			<!-- Collect the nav links for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
 					<li><a href="./index.html"><span><strong>
@@ -66,8 +66,10 @@
 		</div>
 	</header>
 
+	<!-- Main content -->
 	<div class="container">
-		<div class="row">
+		<!-- Description -->
+		<div class="row vspace">
 			<div class="col-lg-12" style="padding: 20px 20px;">
 				<h4>KB Navigator</h4>
 				<p>This visualization allows a selection of the outcomes of
@@ -78,7 +80,9 @@
 					the respective controls.</p>
 			</div>
 		</div>
-		<div class="row vspace" id="toolbarDynamic" style="margin-top: 20px">
+
+		<!-- Toolbar -->
+		<div class="row vspace" id="toolbarDynamic">
 			<div class="col-lg-12">
 				<div class="btn-group  btn-group-sm" role="group">
 					<button id="resetAll" class="btn btn-primary " role="button">
@@ -108,10 +112,12 @@
 				</div>
 			</div>
 		</div>
+
 	</div>
 
 	<hr>
 
+	<!-- D3 content -->
 	<div class="container-fluid">
 		<div class="col-lg-12">
 			<div class="row text-center">
@@ -127,7 +133,7 @@
 		</div>
 	</footer>
 
-	<!-- Include for Visualization -->
+	<!-- Include for Visualizations -->
 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
 	<script src="js/modals.js" type="text/javascript"></script>
 	<script src="js/prototype.js" type="text/javascript"></script>
