--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -21,7 +21,7 @@
 <link href="./css/legacyLayout.css" rel="stylesheet" />
 
 <!-- JavaScript Libraries -->
-<script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="./js/lib/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 <script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>
 
@@ -33,6 +33,7 @@
 </script>
 </head>
 <body>
+	<!-- Navigation -->
 	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
@@ -47,7 +48,7 @@
 				<a class="navbar-brand visible-xs" href="./index.html">CloudDSF+</a>
 			</div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
+			<!-- Collect the nav links for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
 					<li><a href="./index.html"><span><strong>
@@ -64,6 +65,7 @@
 		</div>
 	</header>
 
+	<!-- Subnavigation -->
 	<div class="navbar navbar-inverse navbar-static-top subnav"
 		role="navigation">
 		<div id="visTypeDIV" class="container">
@@ -80,6 +82,7 @@
 		</div>
 	</div>
 
+	<!-- Important Notice -->
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-lg-12 bg-warning" style="padding: 30px 20px;">
@@ -98,17 +101,23 @@
 			</div>
 		</div>
 
+		<!-- Main Content adapted from CloudDSF -->
 		<div class="row top-buffer">
 			<div id="visContentDIV" class="col-lg-9 text-center">
+				<!-- Headline for visualization -->
 				<div id="visLabel">
 					<h4></h4>
 					<a id="vislabelInfo" href="#" tabindex="0" role="button"
 						data-toggle="popover" data-trigger="focus"
 						class="glyphicon glyphicon-question-sign"></a>
 				</div>
+				<!-- D3 content -->
 				<div id="visContent"></div>
 			</div>
+
+			<!-- Right panel for additional information -->
 			<div id="visRightDIV" class="col-lg-3">
+
 				<div class="visPanelHeader">
 					<div class="visPanelHeaderIconLeft pull-left">
 						<a id="visPanelSettingsIconToggle" href="#"> <span
@@ -122,7 +131,6 @@
 					<div class="clearfix"></div>
 				</div>
 				<div id="visPanelSettingsContent" class="visPanelContent"></div>
-
 				<div class="visPanelHeader">
 					<div class="visPanelHeaderIconLeft pull-left">
 						<a id="visPanelInfoIconToggle"> <span
@@ -135,7 +143,6 @@
 					</div>
 					<div class="clearfix"></div>
 				</div>
-
 				<div id="visRightContent" class="visPanelContent">
 					<div id="visInfoLabelBOX">
 						<div id="visInfoLabelTextBOX">
@@ -157,7 +164,7 @@
 		</div>
 	</footer>
 
-	<!-- JavaScript - Legacy Visualizations -->
+	<!-- Include for Visualizations -->
 	<script src="./js/legacyVisualizations.js" type="text/javascript"></script>
 </body>
 </html>
