--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,11 +20,12 @@
 <!-- Custom Style Sheets -->
 
 <!-- JavaScript Libraries -->
-<script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="./js/lib/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 
 </head>
 <body>
+<!-- Navigation -->
 	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
@@ -39,7 +40,7 @@
 				<a class="navbar-brand visible-xs" href="./index.html">CloudDSF+</a>
 			</div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
+			<!-- Collect the nav links for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
 					<li class="active"><a href="./index.html"><span><strong>
@@ -56,6 +57,7 @@
 		</div>
 	</header>
 
+	<!-- Main content -->
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -70,6 +72,7 @@
 				</div>
 			</div>
 		</div>
+
 		<div class="row">
 			<div class="col-md-5">
 				<h3>Main Approach</h3>
@@ -104,6 +107,7 @@
 					CloudDSF by this website.</p>
 			</div>
 		</div>
+
 	</div>
 
 	<footer class="footer">
@@ -112,5 +116,6 @@
 				Application Systems</p>
 		</div>
 	</footer>
+
 </body>
 </html>
