--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -22,7 +22,7 @@
 <link href="./css/knowledgeBase.css" rel="stylesheet" />
 
 <!-- JavaScript Libraries -->
-<script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="./js/lib/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap-switch.min.js" type="text/javascript"></script>
 <script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
@@ -30,6 +30,7 @@
 
 </head>
 <body>
+	<!-- Navigation -->
 	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
@@ -44,7 +45,7 @@
 				<a class="navbar-brand visible-xs" href="./index.html">CloudDSF+</a>
 			</div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
+			<!-- Collect the nav links for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
 					<li><a href="./index.html"><span><strong>
@@ -61,6 +62,7 @@
 		</div>
 	</header>
 
+	<!-- Subnavigation -->
 	<div class="navbar navbar-inverse navbar-static-top subnav vspace"
 		role="navigation">
 		<div class="container">
@@ -79,8 +81,8 @@
 	</div>
 
 	<div class="container vspace">
-
 		<div class="row" id="toolbarTree">
+
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<h4>Hierarchical Layout</h4>
@@ -89,6 +91,7 @@
 						elements can be toggled at once with the respective controls.</p>
 				</div>
 			</div>
+
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="btn-group-sm">
@@ -103,7 +106,9 @@
 			</div>
 		</div>
 
+		<!-- Toolbar Decision Relations Layout -->
 		<div class="row hidden" id="toolbarDecisions">
+
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 vspace">
 					<h4>Decision Relations Layout</h4>
@@ -114,6 +119,7 @@
 						everything else.</p>
 				</div>
 			</div>
+
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 vspace">
 					<div class="btn-group" role="group">
@@ -128,9 +134,12 @@
 					</div>
 				</div>
 			</div>
+
 		</div>
 
+		<!-- Toolbar Outcome Relations Layout -->
 		<div class="row hidden" id="toolbarOutcomes">
+
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 vspace">
 					<h4>Outcome Relations Layout</h4>
@@ -139,6 +148,7 @@
 						the selection of relationship types</p>
 				</div>
 			</div>
+
 			<div class="row">
 				<div class="col-lg-10 btn-group btn-group-sm vspace col-lg-offset-2"
 					role="group">
@@ -152,6 +162,7 @@
 						Layout</button>
 				</div>
 			</div>
+
 			<div class="row">
 				<div class="col-lg-10 btn-group vspace col-lg-offset-2" role="group">
 					<span><strong>Toggle Relationships: </strong></span> <input
@@ -165,9 +176,11 @@
 						checked></input>
 				</div>
 			</div>
+
 		</div>
 	</div>
 
+	<!-- D3 content -->
 	<div class="container-fluid">
 		<div class="col-lg-12">
 			<div class="row text-center">
@@ -183,11 +196,12 @@
 		</div>
 	</footer>
 
-	<!-- Include for Visualization -->
+	<!-- Include for Visualizations -->
 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
 	<script src="js/knowledgeBase.js" type="text/javascript"></script>
 	<script src="js/treeLayout.js" type="text/javascript"></script>
 	<script src="js/outcomeRelations.js" type="text/javascript"></script>
 	<script src="js/decisionRelations.js" type="text/javascript"></script>
+
 </body>
 </html>
