Update of d3 library from v3.4.13 > v3.5.5

--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -25,7 +25,7 @@
 <script src="./js/lib/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap-switch.min.js" type="text/javascript"></script>
-<script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
+<script src="./js/lib/d3.v3.js" type="text/javascript"></script>
 <script src="./js/lib/d3tip.js" type="text/javascript"></script>
 
 </head>
