--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -28,13 +28,14 @@
 <script src="./js/lib/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap-switch.min.js" type="text/javascript"></script>
-<script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
-<script src="./js/lib/d3tip.js" type="text/javascript"></script>
 <script src="./js/lib/bootbox.js" type="text/javascript"></script>
+<script src="./js/lib/d3.v3.js" type="text/javascript"></script>
+<script src="./js/lib/d3tip.js" type="text/javascript"></script>
 
 </head>
 
 <body style="min-width: 1600px">
+	<!-- Navigation -->
 	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
 		<div class="container">
