--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -13,9 +13,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-<!-- Stylesheets -->
-<link href="./css/bootstrap.min.css" rel="stylesheet" />
-
 <!-- Global Style Sheets  -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
 <link href="./css/bootstrap-switch.min.css" rel="stylesheet" />
@@ -28,7 +25,7 @@
 <script src="./js/lib/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap-switch.min.js" type="text/javascript"></script>
-<script src="./js/lib/bootbox.js" type="text/javascript"></script>
+<script src="./js/lib/bootbox.min.js" type="text/javascript"></script>
 <script src="./js/lib/d3.v3.js" type="text/javascript"></script>
 <script src="./js/lib/d3tip.js" type="text/javascript"></script>
 
