HTML comments and formatting

--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -80,9 +80,11 @@
 		</div>
 	</div>
 
+	<!-- Toolbars container -->
 	<div class="container vspace">
-		<div class="row" id="toolbarTree">
 
+		<!-- Toolbar Hierarchical Layout -->
+		<div class="row" id="toolbarTree">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<h4>Hierarchical Layout</h4>
@@ -104,6 +106,7 @@
 					</div>
 				</div>
 			</div>
+
 		</div>
 
 		<!-- Toolbar Decision Relations Layout -->
