--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -126,8 +126,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 vspace">
 					<div class="btn-group" role="group">
-						<span><strong>Toggle Relationships: </strong></span> <input
-							type="checkbox" name="toggleAll" checked></input> <input
+						<input type="checkbox" name="toggleAll" checked></input> <input
 							type="checkbox" class="toggle-state-switch" name="toggleBinding"
 							checked></input> <input type="checkbox"
 							class="toggle-state-switch" name="toggleAffecting" checked></input>
