--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -167,8 +167,7 @@
 
 			<div class="row">
 				<div class="col-lg-10 btn-group vspace col-lg-offset-2" role="group">
-					<span><strong>Toggle Relationships: </strong></span> <input
-						type="checkbox" name="outcomeToggleAll" checked></input> <input
+					<input type="checkbox" name="outcomeToggleAll" checked></input> <input
 						type="checkbox" class="out-state-switch" name="outBinding" checked></input>
 					<input type="checkbox" class="out-state-switch" name="outAffecting"
 						checked></input> <input type="checkbox" class="out-state-switch"
