Switches aligned in one row

--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -80,8 +80,8 @@
 		</div>
 
 		<!-- Toolbar -->
-		<div class="row vspace" id="toolbarDynamic">
-			<div class="col-lg-12">
+		<div class="row vspace">
+			<div class="col-lg-12 vspace">
 				<div class="btn-group  btn-group-sm" role="group">
 					<button id="resetAll" class="btn btn-primary " role="button">
 						<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
@@ -95,22 +95,17 @@
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-lg-6">
-				<div class="btn-group" role="group">
-					<input type="checkbox" name="toggleLastOutcome" checked></input> <input
-						type="checkbox" name="toggleRequiring" checked></input>
-				</div>
+		<div class="row vspace">
+			<div class="col-lg-6 btn-group" role="group">
+				<input type="checkbox" name="toggleLastOutcome" checked></input> <input
+					type="checkbox" name="toggleRequiring" checked></input>
 			</div>
-			<div class="col-lg-6">
-				<div class="btn-group" role="group">
-					<input type="checkbox" name="toggleBinding" checked></input> <input
-						type="checkbox" name="toggleAffecting" checked></input> <input
-						type="checkbox" name="toggleAllowing" checked></input>
-				</div>
+			<div class="col-lg-6 btn-group" role="group">
+				<input type="checkbox" name="toggleBinding" checked></input> <input
+					type="checkbox" name="toggleAffecting" checked></input> <input
+					type="checkbox" name="toggleAllowing" checked></input>
 			</div>
 		</div>
-
 	</div>
 
 	<hr>
