Rename of cloudDSFPrototype.html to kbNavigator.html

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -45,7 +45,7 @@
 				<ul class="nav navbar-nav nav-justified">
 					<li class="active"><a href="./index.html"><span><strong>
 									CloudDSF+</strong></span></a></li>
-					<li><a href="./cloudDSFPrototype.html"><span>KB
+					<li><a href="./kbNavigator.html"><span>KB
 								Navigator</span> </a></li>
 					<li><a href="./knowledgeBase.html"><span>KB
 								Visualizer</span> </a></li>
