--- a/WebContent/kbNavigator.html
+++ b/WebContent/kbNavigator.html
@@ -52,7 +52,7 @@
 				<ul class="nav navbar-nav nav-justified">
 					<li><a href="./index.html"><span><strong>
 									CloudDSF+</strong></span></a></li>
-					<li class="active"><a href="./cloudDSFPrototype.html"><span>KB
+					<li class="active"><a href="./kbNavigator.html"><span>KB
 								Navigator</span> </a></li>
 					<li><a href="./knowledgeBase.html"><span>KB
 								Visualizer</span> </a></li>
