Switch to minified d3 library

--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -23,7 +23,7 @@
 <!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
-<script src="./js/lib/d3.v3.js" type="text/javascript"></script>
+<script src="./js/lib/d3.v3.min.js" type="text/javascript"></script>
 
 <!-- Start layouts, not possible to substitute without refactoring -->
 <script type="text/javascript">
