Removal of commented toolbar buttons Pretty print

--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -50,8 +50,8 @@
 				<ul class="nav navbar-nav nav-justified">
 					<li><a href="./index.html"><span><strong>
 									CloudDSF+</strong></span></a></li>
-					<li><a href="./kbNavigator.html"><span>KB
-								Navigator</span> </a></li>
+					<li><a href="./kbNavigator.html"><span>KB Navigator</span>
+					</a></li>
 					<li class="active"><a href="./knowledgeBase.html"><span>KB
 								Visualizer</span> </a></li>
 					<li><a href="./cloudDSFVisualizations.html"><span>CloudDSF
@@ -150,19 +150,6 @@
 						the selection of relationship types</p>
 				</div>
 			</div>
-
-			<!-- 			<div class="row">
-				<div class="col-lg-8 btn-group vspace col-lg-offset-2" role="group">
-					<button id="showAll" class="btn btn-primary" role="button">Show
-						All Relations</button>
-					<button id="hideAll" class="btn btn-primary" role="button">Hide
-						All Relations</button>
-					<button id="fixLayout" class="btn btn-primary" role="button">Fixed
-						Layout</button>
-					<button id="looseLayout" class="btn btn-primary" role="button">Loose
-						Layout</button>
-				</div>
-			</div> -->
 
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 vspace">
